<resources>
    <string name="app_name">MusicSharing</string>
    <string name="login_text">Login</string>
    <string name="username_text">Username</string>
    <string name="email_hint">Enter Email...</string>
    <string name="password_text">Password</string>
    <string name="password_hint">Enter Password...</string>
    <string name="login_button">login</string>
    <string name="back_to_login_button">Back to\nlogin</string>
    <string name="signup_text">Don\'t have and account?</string>
    <string name="signup_button">Sign Up</string>
    <string name="edit_profile">edit profile</string>
    <string name="delete_profile">delete profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="first_fragment">Our first fragment</string>
    <string name="created_account">Created Account</string>
    <string name="search_song">Find song</string>
</resources>